--- a/espnow-mqtt/package.json
+++ b/espnow-mqtt/package.json
@@ -40,6 +40,7 @@
     "babel-jest": "^19.0.0",
     "gulp-eslint": "^3.0.1",
     "jest-cli": "^19.0.2",
+    "moment": "^2.18.1",
     "mqtt": "^2.7.2"
   }
 }
