test batt version

--- a/ESP_AsyncFSBrowser/platformio.ini
+++ b/ESP_AsyncFSBrowser/platformio.ini
@@ -12,7 +12,7 @@
 platform=espressif8266
 board=espresso_lite_v2
 framework=arduino
-upload_speed = 460800
+upload_speed = 115200
 build_flags = -lespnow
 ; upload_port = /dev/tty.usbserial-AH03IU4U
 
@@ -21,6 +21,6 @@ lib_deps =
      ESPAsyncWebServer
      ArduinoJSON
      DHT sensor library
-
+     Ultrasonic@2.1.0
 [platformio]
 src_dir=ESP_AsyncFSBrowser
