--- a/espnow-mqtt/package.json
+++ b/espnow-mqtt/package.json
@@ -41,6 +41,8 @@
     "gulp-eslint": "^3.0.1",
     "jest-cli": "^19.0.2",
     "moment": "^2.18.1",
-    "mqtt": "^2.7.2"
+    "moment-timezone": "^0.5.13",
+    "mqtt": "^2.7.2",
+    "underscore": "^1.8.3"
   }
 }
