--- a/espnow-mqtt/package.json
+++ b/espnow-mqtt/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cmmc-node-es6-gulp",
+  "name": "esp-now-mqtt-nodejs",
   "version": "0.0.0",
   "description": "hello",
   "engineStrict": true,
@@ -7,12 +7,14 @@
     "node": ">=6.9"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.2",
+    "babel-eslint": "^7.2.3",
+    "babel-jest": "^19.0.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.9.0",
     "chai": "^3.5.0",
+    "eslint": "^4.1.1",
     "eslint-config-standard": "^10.2.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-node": "^4.2.2",
@@ -25,11 +27,20 @@
     "gulp-load-plugins": "^1.5.0",
     "gulp-mocha": "^2.2.0",
     "gulp-sourcemaps": "^2.6.0",
-    "jest-cli": "^19.0.2"
+    "jest": "^20.0.4",
+    "jest-cli": "^19.0.2",
+    "regenerator-runtime": "^0.10.5"
   },
   "babel": {
     "presets": [
       "es2015"
+    ]
+  },
+  "jest": {
+    "verbose": true,
+    "testPathIgnorePatterns": [],
+    "roots": [
+      "."
     ]
   },
   "scripts": {
