--- a/espnow-controller/platformio.ini
+++ b/espnow-controller/platformio.ini
@@ -13,7 +13,7 @@ platform=espressif8266
 board=espresso_lite_v2
 framework=arduino
 build_flags = -lespnow
-;upload_port = /dev/tty.usbserial-AL0227KV
+upload_port = /dev/tty.usbserial-AL0227KV
 upload_speed = 230400
 
 [platformio]
