--- a/man_dht001/platformio.ini
+++ b/man_dht001/platformio.ini
@@ -21,7 +21,7 @@ lib_deps =
      # Using library Name
      ESPAsyncWebServer
      ArduinoJSON
-     DHT sensor library
+     DHT sensor library@1.3.0
      Ultrasonic@2.1.0
 [platformio]
-src_dir=ESP_AsyncFSBrowser
+src_dir=man_dht001
