--- a/ESP_AsyncFSBrowser/data/config.json
+++ b/ESP_AsyncFSBrowser/data/config.json
@@ -1,1 +1,1 @@
-{"mac": "18FE34DB3B98", "name": "nat03", "sleepS": 5, "dhtType": 22}
+{"mac": "18FE34DB3B98", "name": "home002", "sleepS": 5, "dhtType": 22}
