--- a/ESP_AsyncFSBrowser/platformio.ini
+++ b/ESP_AsyncFSBrowser/platformio.ini
@@ -17,6 +17,8 @@ upload_speed = 230400
 ; build_flags = '-DWIFI_SSID="Nat"' '-DWIFI_PASSWORD="123456789"' -DDEBUG_ESP_PORT=Serial -DCMMC_MQTT_DEBUG_MODE -DMQTT_DEBUG_LEVEL_VERBOSE -DMQTT_DEBUG_LEVEL_VERBOSE -DMQTT_DEBUG_MODE
 ; -Wl,-Tesp8266.flash.4m1m.ld
 build_flags = -DDEBUG_ESP_CORE -DDEBUG_ESP_SSL -DDEBUG_ESP_WIFI -DDEBUG_ESP_HTTP_CLIENT -DDEBUG_ESP_HTTP_UPDATE -DDEBUG_ESP_HTTP_SERVER -DDEBUG_ESP_UPDATER -DDEBUG_ESP_OTA -DDEBUG_TLS_MEM
+build_flags = -lespnow
+
 ; build_flags = -Wl,-Tesp8266.flash.4m.ld
 ; upload_port = COM9
 ; upload_port = /dev/tty.usbserial-AH03IU4U
