--- a/ESP_AsyncFSBrowser/platformio.ini
+++ b/ESP_AsyncFSBrowser/platformio.ini
@@ -12,16 +12,18 @@
 platform=espressif8266
 board=espresso_lite_v2
 framework=arduino
-upload_speed = 230400
+upload_speed = 115200
 ; build_flags = -lespnow
 ; build_flags = '-DWIFI_SSID="Nat"' '-DWIFI_PASSWORD="123456789"' -DDEBUG_ESP_PORT=Serial -DCMMC_MQTT_DEBUG_MODE -DMQTT_DEBUG_LEVEL_VERBOSE -DMQTT_DEBUG_LEVEL_VERBOSE -DMQTT_DEBUG_MODE
 ; -Wl,-Tesp8266.flash.4m1m.ld
-build_flags = -DDEBUG_ESP_CORE -DDEBUG_ESP_SSL -DDEBUG_ESP_WIFI -DDEBUG_ESP_HTTP_CLIENT -DDEBUG_ESP_HTTP_UPDATE -DDEBUG_ESP_HTTP_SERVER -DDEBUG_ESP_UPDATER -DDEBUG_ESP_OTA -DDEBUG_TLS_MEM
+; build_flags = -Wl,-Tesp8266.flash.1m64.ld -DMQTT_MAX_PACKET_SIZE=400 -lespnow
+build_flags = -Wl, -Tesp8266.flash.4m1m.ld
+build_flags = -DDEBUG_ESP_CORE -DDEBUG_ESP_SSL -DDEBU G_ESP_WIFI -DDEBUG_ESP_HTTP_CLIENT -DDEBUG_ESP_HTTP_UPDATE -DDEBUG_ESP_HTTP_SERVER -DDEBUG_ESP_UPDATER -DDEBUG_ESP_OTA -DDEBUG_TLS_MEM
 build_flags = -lespnow
 
 ; build_flags = -Wl,-Tesp8266.flash.4m.ld
 ; upload_port = COM9
-; upload_port = /dev/tty.usbserial-AH03IU4U
+; upload_port = /dev/tty.usbserial-A104K3QH
 
 lib_deps = ESPAsyncWebServer
      ArduinoJSON
