send over serialport

--- a/ESP_AsyncFSBrowser/platformio.ini
+++ b/ESP_AsyncFSBrowser/platformio.ini
@@ -23,7 +23,7 @@ build_flags = -lespnow
 
 ; build_flags = -Wl,-Tesp8266.flash.4m.ld
 ; upload_port = COM9
-; upload_port = /dev/tty.usbserial-A104K3QH
+upload_port = /dev/tty.usbserial-A104K3QH
 
 lib_deps = ESPAsyncWebServer
      ArduinoJSON
