--- a/espnow-controller/platformio.ini
+++ b/espnow-controller/platformio.ini
@@ -10,10 +10,11 @@
 
 [env:espresso_lite_v2]
 platform=espressif8266
-board=espresso_lite_v2
-framework=arduino
+board = espresso_lite_v2
+framework = arduino
+; build_flags = -Wl,-Tesp8266.flash.1m128.ld
+; build_flags = -DDEBUG_ESP_CORE -DDEBUG_ESP_SSL -DDEBU G_ESP_WIFI -DDEBUG_ESP_HTTP_CLIENT -DDEBUG_ESP_HTTP_UPDATE -DDEBUG_ESP_HTTP_SERVER -DDEBUG_ESP_UPDATER -DDEBUG_ESP_OTA -DDEBUG_TLS_MEM
 build_flags = -lespnow
-upload_port = /dev/tty.usbserial-A703X2U3
 upload_speed = 230400
 
 [platformio]
